--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-countdown-simple": "^1.0.12",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.3",
+    "react-scroll-to-top": "^3.0.0",
     "yup": "^0.32.11"
   },
   "devDependencies": {
